Kubernetes/ingress/kubernetes-ingress-nginx/header-based-routing/v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
spec:
  selector:
    matchLabels:
      app: app-v1

  template:
    metadata:
      labels:
        app: app-v1
    spec:
      containers:
      - name: app-v1
        image: aakkiiff/hecker:0.2
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app-v1
spec:
  selector:
    app: app-v1
  ports:
  - port: 80
    targetPort: 80
